Added details about how java submissions are secured.